--- a/2022/python/day03.ipynb
+++ b/2022/python/day03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4b43e0d",
+   "id": "5a05c66b",
    "metadata": {},
    "source": [
     "# Day 03"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "524816b3",
+   "id": "c2a721c1",
    "metadata": {},
    "source": [
     "https://adventofcode.com/2022/day/3"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dbd9c1b",
+   "id": "83f7d112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5999c63",
+   "id": "f4c10cf8",
    "metadata": {},
    "source": [
     "## Input"
@@ -39,16 +39,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99766fd",
+   "id": "b77b7b57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rucksacks = aocd.get_data(day=day, year=year).splitlines()"
+    "check_example = False\n",
+    "example = \"\"\"vJrwpWtwJgWrhcsFMMfFFhFp\n",
+    "jqHRNqRjqzjGDLGLrsFMfFZSrLrFZsSL\n",
+    "PmmdzqPrVvPwwTWBwg\n",
+    "wMqvLMZHhHMvwLHjbvcjnnSBnvTQFn\n",
+    "ttgJtRGJQctTZtZT\n",
+    "CrZsJsPPZsGzwwsLwLmpwMDw\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcad301c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data =  example if check_example else aocd.get_data(day=day, year=year)\n",
+    "\n",
+    "rucksacks = data.splitlines()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8de72cf7",
+   "id": "8169785c",
    "metadata": {},
    "source": [
     "## Part 1\n",
@@ -59,27 +77,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9bd7a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f65cae8f",
+   "id": "a0b85407",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 1: None\n"
+      "Part 1: 7826\n"
      ]
     }
    ],
    "source": [
-    "part1 = None\n",
+    "import string\n",
+    "\n",
+    "priorities = {l: p for p, l in enumerate(string.ascii_lowercase + string.ascii_uppercase, start=1)}\n",
+    "common_items = [set(l[:len(l)//2]) & set(l[(len(l)//2):]) for l in rucksacks]\n",
+    "\n",
+    "part1 = sum(map(lambda x: priorities[x.pop()], common_items))\n",
     "\n",
     "print(\"Part 1:\", part1)"
    ]
@@ -87,16 +102,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "169b7d79",
+   "id": "a1db010f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part a already solved with same answer: 7826\n"
+     ]
+    }
+   ],
    "source": [
     "aocd.submit(part1, part=1, day=day, year=year)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a7d0a782",
+   "id": "4f4e9d67",
    "metadata": {},
    "source": [
     "## Part 2 \n",
@@ -107,27 +130,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27765b5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31cf6a77",
+   "id": "a91d07f1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 2: None\n"
+      "Part 2: 2577\n"
      ]
     }
    ],
    "source": [
-    "part2= None\n",
+    "from functools import reduce\n",
+    "\n",
+    "n = 3\n",
+    "common_items = [reduce(set.intersection, (set(rucksacks[i+j]) for j in range(n)))   for i in range(0, len(rucksacks), n)]\n",
+    "\n",
+    "part2 = sum(map(lambda x: priorities[x.pop()], common_items))\n",
     "\n",
     "print(\"Part 2:\", part2)"
    ]
@@ -135,9 +155,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17783a1e",
+   "id": "e2d615fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part b already solved with same answer: 2577\n"
+     ]
+    }
+   ],
    "source": [
     "aocd.submit(part2, part=2, day=day, year=year)"
    ]
