--- a/README.ipynb
+++ b/README.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Advent of Code\"\n",
+    "execute:\n",
+    "  echo: false\n",
+    "format: gfm\n",
+    "---"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -45,26 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook README.ipynb to markdown\n",
-      "[NbConvertApp] Writing 816 bytes to README.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!jupyter nbconvert --no-input --to markdown README.ipynb"
+    "!quarto render README.ipynb -o README.md"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -78,12 +81,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5a407f5e782d91cd6dc6b75073ac63b7c29c958c56dd04bd364b5f9f6b290a1a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
